--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div class="container">
         <h1>🔐 Multi-Chain Wallet Reputation Checker</h1>
         <p class="subtitle">Analyze crypto wallet trustworthiness across 60+ blockchains</p>
-        <span class="networks-badge">✨ POWERED BY ETHERSCAN V2 API - 60+ NETWORKS</span>
+    
 
         <div class="input-group">
             <label for="chainSelect">Select Blockchain</label>
@@ -373,7 +373,9 @@
             </div>
         </div>
     </div>
-
+<div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #e0e0e0; text-align: center; font-size: 12px; color: #999;">
+            Powered by Etherscan V2 API
+        </div>
     <script>
     
         const ETHERSCAN_API_KEY = 'MY1P7F2PDC1MFIUDFNWJRB8JFBE2YPG7IF';
