--- a/index.html
+++ b/index.html
@@ -373,8 +373,9 @@
             </div>
         </div>
     </div>
-<div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #e0e0e0; text-align: center; font-size: 12px; color: #999;">
+<div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #e0e0e0; text-align: center; font-size: 12px; color: #666;">
             Powered by Etherscan V2 API
+        </div>
         </div>
     <script>
     
